--- a/src/app/layout/record/record.component.html
+++ b/src/app/layout/record/record.component.html
@@ -91,11 +91,11 @@
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
 <hr>
-<!--<div class="row">
+<div class="row">
     <div class="col-xs-12">
         <button class="btn btn-success" (click)="eventClicked()">Export To CSV</button>
     </div>
-</div>-->
+</div>
 <div class="row" *ngIf="isClicked">
     <div class="col col-xs-12">
         <div class="card mb-12">
